tests/lnttool/create.shtest
# Test 'lnt create' end-to-end.
#
# RUN: rm -rf %t.tmp && mkdir -p %t.tmp
# RUN: %{utils}/with_postgres.sh %t.pg.log \
# RUN:     /bin/sh %s %s %t.tmp %{shared_inputs}

set -eux

THIS_FILE="$1"
TMPBASE="$2"
SHARED_INPUTS="$3"

###############################################################################
# Default creation: verify the generated config and instance file hierarchy
###############################################################################
lnt create "${TMPBASE}/instance" \
    --db-dir "${LNT_TEST_DB_URI}" \
    --default-db "${LNT_TEST_DB_NAME}" \
    > "${TMPBASE}/create-output"

# -- Config file contains all expected fields with default values
filecheck --check-prefix CHECK-CFG "${THIS_FILE}" < "${TMPBASE}/instance/lnt.cfg"

# CHECK-CFG:      config_version = (0, 1, 0)
# CHECK-CFG:      name = 'LNT'
# CHECK-CFG:      zorgURL = 'http://localhost'
# CHECK-CFG:      tmp_dir = 'lnt_tmp'
# CHECK-CFG:      db_dir = 'postgresql://postgres@127.0.0.1:{{[0-9]+}}'
# CHECK-CFG:      profile_dir = 'data/profiles'
# CHECK-CFG:      secret_key =
# CHECK-CFG:      # api_auth_token = 'secret'
# CHECK-CFG:      databases = {
# CHECK-CFG-NEXT:     'default' : { 'path' : 'lnt_test' },
# CHECK-CFG:      nt_emailer = {

# -- Directory structure is created
test -d "${TMPBASE}/instance/lnt_tmp"
test -d "${TMPBASE}/instance/schemas"

###############################################################################
# Make sure that custom options all take effect
###############################################################################
lnt create "${TMPBASE}/custom" \
    --name "My LNT" \
    --url https://example.com/lnt \
    --api-auth-token mytoken \
    --secret-key deadbeef \
    --default-db "${LNT_TEST_DB_NAME}" \
    --db-dir "${LNT_TEST_DB_URI}" \
    --tmp-dir mytmp \
    --profile-dir my/profiles

filecheck --check-prefix CHECK-CUSTOM "${THIS_FILE}" < "${TMPBASE}/custom/lnt.cfg"

# CHECK-CUSTOM:      name = 'My LNT'
# CHECK-CUSTOM:      zorgURL = 'https://example.com/lnt'
# CHECK-CUSTOM:      tmp_dir = 'mytmp'
# CHECK-CUSTOM:      db_dir = 'postgresql://postgres@127.0.0.1:{{[0-9]+}}'
# CHECK-CUSTOM:      profile_dir = 'my/profiles'
# CHECK-CUSTOM:      secret_key = 'deadbeef'
# CHECK-CUSTOM:      api_auth_token = 'mytoken'
# CHECK-CUSTOM:      'default' : { 'path' : 'lnt_test' },

test -d "${TMPBASE}/custom/mytmp"

###############################################################################
# Error: creating into an existing path fails.
###############################################################################
mkdir "${TMPBASE}/exists"
if lnt create "${TMPBASE}/exists" 2> "${TMPBASE}/exists-err"; then
    echo "Expected lnt create to fail on existing path" >&2
    exit 1
fi
filecheck --check-prefix CHECK-EXISTS "${THIS_FILE}" < "${TMPBASE}/exists-err"

# CHECK-EXISTS: error: invalid path: {{.*}} already exists

###############################################################################
# The generated instance can be loaded by lnt runserver (smoke test: just
# verify that 'lnt import' can talk to the instance, which requires loading
# the config and database).
###############################################################################
lnt import "${TMPBASE}/instance" "${SHARED_INPUTS}/sample-a-small.plist" \
    --show-sample-count \
    | filecheck --check-prefix CHECK-IMPORT "${THIS_FILE}"

# CHECK-IMPORT: Import succeeded.

###############################################################################
# v5 creation: --db-version 5.0 writes db_version into the config and
# initializes the v5 global tables.
###############################################################################

# Create the database first (Postgres requires it to exist).
psql "${LNT_TEST_DB_URI}/postgres" -c "CREATE DATABASE lnt_test_v5" 2>/dev/null || true

lnt create "${TMPBASE}/v5inst" \
    --db-dir "${LNT_TEST_DB_URI}" \
    --default-db "lnt_test_v5" \
    --db-version 5.0 \
    --api-auth-token test_token

filecheck --check-prefix CHECK-V5 "${THIS_FILE}" < "${TMPBASE}/v5inst/lnt.cfg"

# CHECK-V5: 'default' : { 'db_version': '5.0', 'path' : '{{.*}}lnt_test_v5' },
